# Labochka8a

./: CMakeLists.txt  main.cpp
